[package]
name = "guessing"
version = "0.1.0"
authors = ["Simon Roberts <simon@sirob.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
structopt = { version = "0.3", default-features = false }
exitcode = "1.1.2"